@@ -85,6 +85,7 @@ Engine fixes:
 * Fix timing of Effects so that the first "tick" happens immediately.
 * Fix "Press button to use" prompt no showing up for some items.
 * Fix loud loot drop sound effect when there are a large number of drops at once.
+* Fix incorrect HP/MP regen for high regen values and high frame limits.
 
 Game updates:
 
